--- a/test/System.Runtime.Tests/System.Runtime.Tests.csproj
+++ b/test/System.Runtime.Tests/System.Runtime.Tests.csproj
@@ -56,6 +56,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ActivatorTests.cs" />
     <Compile Include="AssertExtensions.cs" />
     <Compile Include="DateTimeOffsetTests.cs" />
     <Compile Include="EnumTests.cs" />
