New tests for Monitor2 and small fixes
- Fix exceptions for null parameters.
- Forbid the usage of IsEntered method.

--- a/test/System.Runtime.Tests/System.Runtime.Tests.csproj
+++ b/test/System.Runtime.Tests/System.Runtime.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="StringTests.cs" />
     <Compile Include="Threading\LazyInitializerTests.cs" />
     <Compile Include="Threading\MonitorTests.cs" />
+    <Compile Include="Threading\MonitorTestsMS.cs" />
     <Compile Include="Threading\VolatileTests.cs" />
     <Compile Include="TypeExTests.cs" />
     <Compile Include="WeakReferenceOfTTests.cs" />
