--- a/test/System.Runtime.Tests/System.Runtime.Tests.csproj
+++ b/test/System.Runtime.Tests/System.Runtime.Tests.csproj
@@ -64,10 +64,13 @@
     <Compile Include="LazyTests.cs" />
     <Compile Include="LazyTestsMS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Runtime\Serialization\FormatterConverterTests.cs" />
+    <Compile Include="Runtime\Serialization\SerializationInfoTests.cs" />
     <Compile Include="StringTests.cs" />
     <Compile Include="Threading\LazyInitializerTests.cs" />
     <Compile Include="Threading\MonitorTests.cs" />
     <Compile Include="Threading\MonitorTestsMS.cs" />
+    <Compile Include="Threading\SpinWaitTests.cs" />
     <Compile Include="Threading\VolatileTests.cs" />
     <Compile Include="TypeExTests.cs" />
     <Compile Include="WeakReferenceOfTTests.cs" />
