Create new tests and fixes
- Create tests for AggregateException and CancellationToken*.
- Fix callback order for CancellationTokenSource.
- Fix hash code result for CancellationTokenRegistration.
- Fix to allow resetting of CancellationTokenSource timeout.
- Fix to not generate an unique identifier for CancellationTokenRegistration when the source is canceled.
- Fix WaitHandle property value for CancellationToken.
- Improve volatile protection for disposing variable on CancellationTokenSource.
- Move AssertExtensions to a common library.
- Relax timeout for MonitorTryEnterTimeout test case.

--- a/test/Tasks.Tests/Tasks.Tests.csproj
+++ b/test/Tasks.Tests/Tasks.Tests.csproj
@@ -62,8 +62,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AggregateExceptionTests.cs" />
     <Compile Include="BasicAsyncTest.cs" />
     <Compile Include="CancellationTokenSourceTest.cs" />
+    <Compile Include="CancellationTokenTests.core.cs" />
     <Compile Include="CancellationTokenTests.cs" />
     <Compile Include="ContinueWithTests.cs" />
     <Compile Include="FromAsyncTests.cs" />
@@ -76,6 +78,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="$(SolutionDir)tools\keypair.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common.Tests\Common.Tests.csproj">
+      <Project>{11362ef6-8335-4739-9ab0-2fff56589661}</Project>
+      <Name>Common.Tests</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
