--- a/test/System.Runtime.Tests/System.Runtime.Tests.csproj
+++ b/test/System.Runtime.Tests/System.Runtime.Tests.csproj
@@ -57,7 +57,6 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ActivatorTests.cs" />
-    <Compile Include="AssertExtensions.cs" />
     <Compile Include="DateTimeOffsetTests.cs" />
     <Compile Include="EnumTests.cs" />
     <Compile Include="LazyOfTMetadataTests.cs" />
@@ -75,6 +74,12 @@
     <Compile Include="TypeExTests.cs" />
     <Compile Include="WeakReferenceOfTTests.cs" />
     <Compile Include="WeakReferenceTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common.Tests\Common.Tests.csproj">
+      <Project>{11362ef6-8335-4739-9ab0-2fff56589661}</Project>
+      <Name>Common.Tests</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
