Create Unwrap extension method for Task
- Add FromCanceled method for Task.
- Add IsCompletedSuccessfully property for Task.
- Create Unwrap extension method to create a task that is the result of nested task.

--- a/test/Tasks.Tests/Tasks.Tests.csproj
+++ b/test/Tasks.Tests/Tasks.Tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="TaskBasicTests.cs" />
     <Compile Include="TaskCancellation.cs" />
     <Compile Include="TaskMembersTests.cs" />
+    <Compile Include="UnwrapTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="$(SolutionDir)tools\keypair.snk" />
