--- a/test/Tasks.Tests/Tasks.Tests.csproj
+++ b/test/Tasks.Tests/Tasks.Tests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="OperationCanceledExceptionTests.cs" />
     <Compile Include="ParallelTestHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SynchronizationContextTests.cs" />
     <Compile Include="TaskBasicTests.cs" />
     <Compile Include="TaskCancellation.cs" />
     <Compile Include="TaskMembersTests.cs" />
