Create tests for Int32 and Double parsing

--- a/test/System.Runtime.Tests/System.Runtime.Tests.csproj
+++ b/test/System.Runtime.Tests/System.Runtime.Tests.csproj
@@ -58,7 +58,9 @@
   <ItemGroup>
     <Compile Include="ActivatorTests.cs" />
     <Compile Include="DateTimeOffsetTests.cs" />
+    <Compile Include="DoubleTests.cs" />
     <Compile Include="EnumTests.cs" />
+    <Compile Include="Int32Tests.cs" />
     <Compile Include="LazyOfTMetadataTests.cs" />
     <Compile Include="LazyTests.cs" />
     <Compile Include="LazyTestsMS.cs" />
