Create tests for ManualResetEventSlim and WaitHandle2

--- a/test/Tasks.Tests/Tasks.Tests.csproj
+++ b/test/Tasks.Tests/Tasks.Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ContinueWithTests.cs" />
     <Compile Include="FromAsyncTests.cs" />
     <Compile Include="FutureMembersTests.cs" />
+    <Compile Include="ManualResetEventSlimTests.cs" />
     <Compile Include="OperationCanceledExceptionTests.cs" />
     <Compile Include="ParallelTestHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="TaskCancellation.cs" />
     <Compile Include="TaskMembersTests.cs" />
     <Compile Include="UnwrapTests.cs" />
+    <Compile Include="WaitHandleTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="$(SolutionDir)tools\keypair.snk" />
