--- a/src/NETStandard.WindowsCE/project.json
+++ b/src/NETStandard.WindowsCE/project.json
@@ -20,7 +20,8 @@
     "net35-client": {
       "buildOptions": {
         "nowarn": [ "CS0436", "CS0114" ],
-        "warningsAsErrors": false
+        "warningsAsErrors": false,
+        "xmlDoc": false
       }
     }
   }
