Create asynchronous methods for Stream and create AsyncStream
- Create AsyncStream to implement asynchronous streams using Task and CancellationToken.
- Create CopyTo method extension for Stream.
- Create CopyToAsync, FlushAsync, ReadAsync and WriteAsync extension methods for Stream.

--- a/test/System.Runtime.Tests/System.Runtime.Tests.csproj
+++ b/test/System.Runtime.Tests/System.Runtime.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="EnumTests.cs" />
     <Compile Include="EnumTypes.cs" />
     <Compile Include="Int32Tests.cs" />
+    <Compile Include="IO\Stream.AsyncTests.cs" />
     <Compile Include="LazyOfTMetadataTests.cs" />
     <Compile Include="LazyTests.cs" />
     <Compile Include="LazyTestsMS.cs" />
