--- a/test/Concurrent.Tests/Concurrent.Tests.csproj
+++ b/test/Concurrent.Tests/Concurrent.Tests.csproj
@@ -46,6 +46,11 @@
       <HintPath>..\..\src\NETStandard.WindowsCE\bin\Debug\net35-client\NETStandard.WindowsCE.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Threading, Version=1.0.2856.102, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\TaskParallelLibrary.1.0.2856.0\lib\Net35\System.Threading.dll</HintPath>
+      <Private>True</Private>
+      <Aliases>tpl</Aliases>
+    </Reference>
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -62,12 +67,24 @@
   <ItemGroup>
     <Compile Include="AsyncTests.cs" />
     <Compile Include="ConcurrentDictionaryTests.cs" />
+    <Compile Include="ConcurrentQueueTests.cs" />
+    <Compile Include="IEnumerable_Generic_Tests.cs" />
+    <Compile Include="ProducerConsumerCollectionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestBase.cs" />
+    <Compile Include="TestBase{T}.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\tools\keypair.snk">
       <Link>keypair.snk</Link>
     </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common.Tests\Common.Tests.csproj">
+      <Project>{11362ef6-8335-4739-9ab0-2fff56589661}</Project>
+      <Name>Common.Tests</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
