Add and fix tests on VS2008
- Fix VS2008 projects.
- Fix test of WeakReference and WeakReference<T> classes.
- Add tests of classes on Threading namespace.

--- a/vs2008/Common.Tests/Common.Tests.csproj
+++ b/vs2008/Common.Tests/Common.Tests.csproj
@@ -54,7 +54,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\test\Common.Tests\AssertExtensions.cs">
+    <Compile Include="..\..\test\Common.Tests\AssertExtensions.cs">
       <Link>AssertExtensions.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
