Fix solution name and disable code optimization

--- a/src/NETStandard.WindowsCE/project.json
+++ b/src/NETStandard.WindowsCE/project.json
@@ -9,6 +9,14 @@
     "warningsAsErrors": true
   },
 
+  "configurations": {
+    "Release": {
+      "buildOptions": {
+        "optimize": false
+      }
+    }
+  },
+
   "frameworks": {
     "net35-cf": {
       "frameworkAssemblies": {
