Fix HashSet tests for VS2008

--- a/vs2008/System.Runtime.Tests/System.Runtime.Tests.csproj
+++ b/vs2008/System.Runtime.Tests/System.Runtime.Tests.csproj
@@ -65,6 +65,9 @@
     <Compile Include="..\..\test\System.Runtime.Tests\ActivatorTests.cs">
       <Link>ActivatorTests.cs</Link>
     </Compile>
+    <Compile Include="..\..\test\System.Runtime.Tests\Collections\Generic\HashSetTest_Theraot.cs">
+      <Link>Collections\Generic\HashSetTest_Theraot.cs</Link>
+    </Compile>
     <Compile Include="..\..\test\System.Runtime.Tests\DateTimeOffsetTests.cs">
       <Link>DateTimeOffsetTests.cs</Link>
     </Compile>
