Add ObservableCollection tests to VS2008

--- a/vs2008/System.Runtime.Tests/System.Runtime.Tests.csproj
+++ b/vs2008/System.Runtime.Tests/System.Runtime.Tests.csproj
@@ -68,6 +68,12 @@
     <Compile Include="..\..\test\System.Runtime.Tests\Collections\Generic\HashSetTest_Theraot.cs">
       <Link>Collections\Generic\HashSetTest_Theraot.cs</Link>
     </Compile>
+    <Compile Include="..\..\test\System.Runtime.Tests\Collections\ObjectModel\ObservableCollectionTest_Theraot.cs">
+      <Link>Collections\ObjectModel\ObservableCollectionTest_Theraot.cs</Link>
+    </Compile>
+    <Compile Include="..\..\test\System.Runtime.Tests\Collections\Specialized\CollectionChangedEventValidators.cs">
+      <Link>Collections\Specialized\CollectionChangedEventValidators.cs</Link>
+    </Compile>
     <Compile Include="..\..\test\System.Runtime.Tests\DateTimeOffsetTests.cs">
       <Link>DateTimeOffsetTests.cs</Link>
     </Compile>
