Improve GC2 and remove some inline strings
- Method Collect(int) is no longer unsupported, but generation parameter is ignored.
- Replace inline strings from SerializationInfoEnumerator.
- Set 'System' as root namespace for the project.

--- a/src/NETStandard.WindowsCE/NETStandard.WindowsCE.csproj
+++ b/src/NETStandard.WindowsCE/NETStandard.WindowsCE.csproj
@@ -19,6 +19,7 @@
     <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+    <RootNamespace>System</RootNamespace>
   </PropertyGroup>
 	<PropertyGroup Condition="'$(TargetFramework)' == 'net35-cf'">
 		<TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
