Fix to compile on VS2015

--- a/src/NETStandard.WindowsCE/project.json
+++ b/src/NETStandard.WindowsCE/project.json
@@ -23,6 +23,11 @@
         "mscorlib": "",
         "System": "",
         "System.Core": ""
+      },
+      "buildOptions": {
+        "define": [
+          "WindowsCE"
+        ]
       }
     },
     "net35-client": {
