Fix to build for .NET Client Framework 3.5

--- a/src/NETStandard.WindowsCE/NETStandard.WindowsCE.csproj
+++ b/src/NETStandard.WindowsCE/NETStandard.WindowsCE.csproj
@@ -7,7 +7,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>NETStandard.WindowsCE</AssemblyName>
-    <AssemblyOriginatorKeyFile>../../tools/keypair.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>$(SolutionDir)tools/keypair.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
     <PackageId>NETStandard.WindowsCE</PackageId>
@@ -21,42 +21,40 @@
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <RootNamespace>System</RootNamespace>
   </PropertyGroup>
-	<PropertyGroup Condition="'$(TargetFramework)' == 'net35-cf'">
-		<TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
-		<TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-		<TargetFrameworkProfile>CompactFramework</TargetFrameworkProfile>
-		<DefineConstants>NET35_CF;WindowsCE</DefineConstants>
-		<DisableImplicitFrameworkReferences>True</DisableImplicitFrameworkReferences>
-	</PropertyGroup>
-	<PropertyGroup Condition="'$(TargetFramework)' == 'net35-client'">
-		<TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
-		<TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-		<TargetFrameworkProfile>Client</TargetFrameworkProfile>
-		<!-- https://github.com/Microsoft/msbuild/issues/1333 -->
-		<FrameworkPathOverride>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v3.5\Profile\Client</FrameworkPathOverride>
-		<DisableImplicitFrameworkReferences>True</DisableImplicitFrameworkReferences>
-	</PropertyGroup>
-
-	<PropertyGroup Condition=" '$(TargetFramework)' == 'net35-cf' ">
-		<NoStdLib>True</NoStdLib>
-		<NoConfig>true</NoConfig>
-		<FileAlignment>512</FileAlignment>
-		<GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-		<PlatformID>E2BECB1F-8C8C-41ba-B736-9BE7D946A398</PlatformID>
-	</PropertyGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net35-cf' ">
-		<Reference Include="mscorlib, Version=3.5.0.0, Culture=neutral, PublicKeyToken=969db8053d3322ac" />
-		<Reference Include="System, Version=3.5.0.0, Culture=neutral, PublicKeyToken=969db8053d3322ac" />
-		<Reference Include="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=969db8053d3322ac" />
-  </ItemGroup>
-
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'net35-client' ">
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net35-cf'">
+    <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkProfile>CompactFramework</TargetFrameworkProfile>
+    <DefineConstants>NET35_CF;WindowsCE</DefineConstants>
+    <DisableImplicitFrameworkReferences>True</DisableImplicitFrameworkReferences>
+    <NoStdLib>True</NoStdLib>
+    <NoConfig>true</NoConfig>
+    <FileAlignment>512</FileAlignment>
+    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
+    <PlatformID>E2BECB1F-8C8C-41ba-B736-9BE7D946A398</PlatformID>
+    <Optimize>False</Optimize>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net35-client'">
+    <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <!-- TargetFrameworkProfile>Client</TargetFrameworkProfile -->
+    <!-- https://github.com/Microsoft/msbuild/issues/1333 - ->
+    <FrameworkPathOverride>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v3.5\Profile\Client</FrameworkPathOverride -->
+    <DisableImplicitFrameworkReferences>True</DisableImplicitFrameworkReferences>
+    <NoStdLib>True</NoStdLib>
     <NoWarn>$(NoWarn);CS0436;CS0114</NoWarn>
   </PropertyGroup>
 
-	<ItemGroup Condition=" '$(TargetFramework)' == 'net35-client' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net35-cf' ">
+    <Reference Include="mscorlib, Version=3.5.0.0, Culture=neutral, PublicKeyToken=969db8053d3322ac" />
+    <Reference Include="System, Version=3.5.0.0, Culture=neutral, PublicKeyToken=969db8053d3322ac" />
+    <Reference Include="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=969db8053d3322ac" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net35-client' ">
+    <Reference Include="mscorlib" />
     <Reference Include="System" />
+    <Reference Include="System.Core" />
   </ItemGroup>
 
 </Project>
