--- a/vs2008/TasksTests/TasksTests.csproj
+++ b/vs2008/TasksTests/TasksTests.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{53EB2D0E-550A-4989-85E0-7AC5BAF8ACC4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Tests</RootNamespace>
-    <AssemblyName>TasksTests</AssemblyName>
+    <AssemblyName>Tasks.Tests</AssemblyName>
     <PlatformFamilyName>WindowsCE</PlatformFamilyName>
     <PlatformID>E2BECB1F-8C8C-41ba-B736-9BE7D946A398</PlatformID>
     <OSVersion>5.0</OSVersion>
@@ -19,6 +19,8 @@
     <WarningLevel>4</WarningLevel>
     <ProjectTypeGuids>{73A5A715-AF05-47af-9C33-47A864AF9AE7};{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{4D628B5B-2FBC-4AA6-8C16-197242AEB884};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <NativePlatformName>Windows CE</NativePlatformName>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\tools\keypair.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -52,7 +54,7 @@
     <Reference Include="mscorlib" />
     <Reference Include="NETStandard.WindowsCE, Version=1.0.0.0, Culture=neutral, PublicKeyToken=961e8a38a128a442, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\NETStandard.WindowsCE\lib\net35-cf\NETStandard.WindowsCE.dll</HintPath>
+      <HintPath>..\NETStandard.WindowsCE.Debug\NETStandard.WindowsCE.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -64,8 +66,20 @@
     <Compile Include="..\..\test\Tasks.Tests\TaskBasicTests.cs">
       <Link>TaskBasicTests.cs</Link>
     </Compile>
+    <Compile Include="..\..\test\Tasks.Tests\TaskCancellation.cs">
+      <Link>TaskCancellation.cs</Link>
+    </Compile>
+    <Compile Include="..\..\test\Tasks.Tests\TaskDelayTests.cs">
+      <Link>TaskDelayTests.cs</Link>
+    </Compile>
     <Compile Include="..\..\test\Tasks.Tests\TaskMembersTests.cs">
       <Link>TaskMembersTests.cs</Link>
+    </Compile>
+    <Compile Include="..\..\test\Tasks.Tests\UnwrapTests.cs">
+      <Link>UnwrapTests.cs</Link>
+    </Compile>
+    <Compile Include="..\..\test\Tasks.Tests\WaitHandleTests.cs">
+      <Link>WaitHandleTests.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -74,6 +88,11 @@
       <Project>{CB63FC16-695D-4277-B980-90363DA370CF}</Project>
       <Name>Common.Tests</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\tools\keypair.snk">
+      <Link>keypair.snk</Link>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <PropertyGroup Condition="'$(BuildingInsideVisualStudio)'=='true' ">
