--- a/test/System.Runtime.Tests/System.Runtime.Tests.csproj
+++ b/test/System.Runtime.Tests/System.Runtime.Tests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="LazyTests.cs" />
     <Compile Include="LazyTestsMS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Runtime\CompilerServices\AsyncTaskMethodBuilderTests.cs" />
     <Compile Include="Runtime\CompilerServices\RuntimeHelpersTests.cs" />
     <Compile Include="Runtime\Serialization\FormatterConverterTests.cs" />
     <Compile Include="Runtime\Serialization\SerializationInfoTests.cs" />
