--- a/src/NETStandard.WindowsCE/NETStandard.WindowsCE.csproj
+++ b/src/NETStandard.WindowsCE/NETStandard.WindowsCE.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net35-cf;net35-client</TargetFrameworks>
+    <TargetFrameworks>net35-cf;net35</TargetFrameworks>
     <NoWarn>$(NoWarn);CS1591</NoWarn>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -34,14 +34,8 @@
     <PlatformID>E2BECB1F-8C8C-41ba-B736-9BE7D946A398</PlatformID>
     <Optimize>False</Optimize>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(TargetFramework)' == 'net35-client'">
-    <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <!-- TargetFrameworkProfile>Client</TargetFrameworkProfile -->
-    <!-- https://github.com/Microsoft/msbuild/issues/1333 - ->
-    <FrameworkPathOverride>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v3.5\Profile\Client</FrameworkPathOverride -->
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net35'">
     <DisableImplicitFrameworkReferences>True</DisableImplicitFrameworkReferences>
-    <NoStdLib>True</NoStdLib>
     <NoWarn>$(NoWarn);CS0436;CS0114</NoWarn>
   </PropertyGroup>
 
@@ -51,7 +45,7 @@
     <Reference Include="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=969db8053d3322ac" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net35-client' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net35' ">
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
